# collmpa

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindCLANG_FORMAT.cmake  clang-format.cmake
include/: Number.hpp  SSA.hpp
src/: Number.cpp  SSA.cpp  main.cpp
